--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 babel==2.9.0
 python-dateutil==2.6.0
-flask-moment==0.11.0
+flask-moment==1.0.6
 flask-wtf==0.14.3
 flask_sqlalchemy==2.4.4
-psycopg2-binary
+psycopg2-binary==2.9.9
+werkzeug==2.0.0
+flask==2.0.3
