--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ flask_sqlalchemy==2.4.4
 psycopg2-binary==2.9.9
 werkzeug==2.0.0
 flask==2.0.3
+jinja2==3.0.1
+SQLAlchemy==1.4.0
+Flask-Migrate==4.0.7
